# SimplyFire-beta

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  block_comment.py  setup.cfg  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
PyMini/: ExcitoPy.py  SimplyFire.spec  __main__.py  app.py  pymini.py  test.py
PyMini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PyMini/Backend/: analyzer.py  analyzer2.py  interface.py  interpreter.py
PyMini/DataVisualizer/: data_display.py  evoked_data_display.py  log_display.py  param_guide.py  results_display.py  trace_display.py
PyMini/Layout/: adjust_tab.py  base_module.py  batch_popup.py  batch_popup2.py  compare_tab.py  continuous_tab.py  detector_tab.py  evoked_tab.py  font_bar.py  graph_panel.py  keybind_popup.py  menubar.py  navigation_tab.py  running_popup.py  setting_tab.py  style_tab.py  sweep_tab.py
PyMini/Modules/: base_control_module.py  base_module.py  base_module_control.py  base_module_layout.py  base_module_popup.py  base_module_table.py  base_parent_module.py  base_tab_module.py  (+1 more)
SimplyFire/: __main__.py  app.py
app/: __main__.py  pymini.py
docs/: conf.py  index.rst
pymini/: __main__.py  pymini.py
simplyfire/: __main__.py  app.py  key_map.yaml  system_config.yaml
simplyfirebeta.egg-info/: PKG-INFO
test_recordings/: 19213003-unfilteredEJC.abf  19911002-2.abf  19911002-2.mini  19911002-2_PyMini.abf  20112011-EJC test.abf  20112011-EJC test_Modified2.abf  evoked test set.prt  filelist.yaml  test_output.abf
(+298 files in other folders)
