[metadata]
name = megumi-mori-SimplyFire
version = 3.0.0
author = Megumi Mori
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU PL3
    Operating System :: Windows

[options]
package_dir =
    = SimplyFire
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    pyabf

[options.packages.find]
where = SimplyFire